# mangadex-mass-uploader

./: .gitignore  .pre-commit-config.yaml  LICENSE  LoginScreen.kv  MassEditorApp.kv  MassUploaderApp.kv  README.md  mangadex_api.py  mass_editor.py  mass_editor.spec  mass_uploader.py  mass_uploader.spec  pyproject.toml  tasks.py  utils.py
mangadex_mass_uploader/: chapter_parser.py  kivy_config.py  main.kv  main.py  main.spec  mangadex_api.py  mass_editor.kv  mass_editor.py  mass_reactivator.kv  mass_reactivator.py  mass_uploader.kv  mass_uploader.py  masseditor.kv  utils.py
mangadex_mass_uploader/widgets/: app_screen.py  chapter_info_input.kv  chapter_info_input.py  log_output.kv  log_output.py  login_screen.kv  login_screen.py  preview_output.kv  preview_output.py  scrollbar_view.kv  scrollbar_view.py
widgets/: app_screen.py  chapter_info_input.kv  chapter_info_input.py  log_output.kv  log_output.py  login_screen.kv  login_screen.py  preview_output.kv
