[tool.poetry]
name = "mangadex-mass-uploader"
version = "0.1.0"
description = ""
authors = ["Xnot <xnot@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
requests = "^2.25.1"
pandas = ">=1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
