[tool.poetry]
name = "mangadex-mass-uploader"
version = "3.0.0"
description = "try to get green!"
authors = ["Xnot"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.mac]
optional = true

[tool.poetry.dependencies]
python = "3.10.*"
requests = ">=2.28.2"
plyer = {git = "https://github.com/Xnot/plyer", rev = "master"}
natsort = ">=8.3.0"
kivy = ">=2.2.1"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
isort = ">=5.12.0"
pyinstaller = ">=5.10.1"
pre-commit = ">=3.2.2"
pytest = ">=7.3.1"
pylint = ">=2.17.2"
invoke = ">=2.2.0"

[tool.poetry.group.mac.dependencies]
pyobjus = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.pylint.messages_control]
disable = [
    "broad-except",
    "logging-fstring-interpolation"
]

[tool.pylint.basic]
good-names = ["_"]

[tool.pylint.format]
max-line-length = 99
expected-line-ending-format = "CRLF"

[tool.pylint.design]
max-locals = 10
max-branches = 8
max-attributes = 10
max-bool-expr = 3

[tool.isort]
profile = "black"
line_length = 99
py_version = 310
src_paths = ["mangadex_mass_uploader"]
sections = ["KIVY_CONFIG", "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_kivy_config = ["mangadex_mass_uploader.kivy_config"]
